@@ -1,5 +1,6 @@
 3.2.0 (released xx.xx.xxxx)
-  *
+  * Detect and use archive programs from Peazip installations.
+    Closes: GH bug #51
 
 3.1.3 (released 15.02.2025)
   * Expand rar detection logic to all 7zip programs
